# tekton-guard

./: .gitignore  .tekton-guard.yaml  404.html  LICENSE  README.md  demo.tape  index.html  pyproject.toml  review-deeper-checks-r1.md  review-deeper-checks-r2.md  review-deeper-checks-r3.md  review-deeper-checks-round2.md  review-deeper-checks-round3.md  review-deeper-checks-round4.md  review-final.md  review-implementation-final.md  review-kubeshield-spec-r1.md  review-kubeshield-spec-r2.md  review-kubeshield-spec-r3.md  review-latest-architecture.md  review-latest-completeness.md  review-latest-security.md  review-phase1.md  review-phase2.md  review-round5-redteam.md  review-round5.md  review-round7.md  sitemap.xml  tekton-guard-task.yaml
.github/workflows/: ci.yml  docs.yml
architecture/overview/: index.html
assets/js/: diagram-zoom.js
contributing/rules/: index.html
contributing/setup/: index.html
docs/specs/: 2026-06-26-kube-shield-rename-design.md  2026-06-27-deeper-tekton-checks-design.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/ci-integration/: index.html
guides/configuration/: index.html
guides/cross-repo/: index.html
guides/false-positives/: index.html
search/: search_index.json
site/: mkdocs.yml
tekton_guard/: __init__.py  __main__.py  checks.py  cli.py  config.py  fixer.py  formatter.py  graph.py  parser.py  resolver.py
tests/: test_checks.py  test_cli.py  test_deeper_checks.py  test_edge_cases.py  test_fixer.py  test_graph.py  test_new_checks.py  test_parser.py  test_phase2_checks.py
(+67 files in other folders)
