[project]
name = "tekton-guard"
version = "1.1.0"
description = "Security scanner for Tekton pipeline definitions"
requires-python = ">=3.10"
dependencies = ["ruamel.yaml>=0.18"]

[project.scripts]
tekton-guard = "tekton_guard.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
